lib/stratiform/res/test/stratiform/corpus/pos/pragma-with-schema.tel
tel 1.0 https://example.com/schema
hello
