lib/stratiform/res/test/stratiform/corpus/neg/e105-sigil-is-digit.tel
tel 1.0 https://example.com/schema 5
hello
